# paper-radar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bootstrap.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml
config/: authors.yaml  keywords.yaml  settings.yaml  sources.yaml
scripts/: __init__.py  __main__.py  fetch_arxiv.py  fetch_hf.py  fetch_semantic_scholar.py  main.py  match_sources.py  render_md.py  score.py  storage.py  utils.py
tests/: test_fetch_arxiv.py  test_match.py  test_render.py  test_score.py  test_utils.py
